# GBHack

./: CMakeLists.txt  README.md
src/: GBHack.sln  inject.cpp  logging.cpp  logging.h  main.h
src/GBHack/: GBHack.vcxproj  GBHack.vcxproj.filters  dllmain.cpp  main.cpp  main.h  maths.cpp  maths.h
src/GBHack/x64/Debug/: GBHack.dll.recipe  vc142.idb
src/GBHack/x64/Debug/GBHack.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GBHack.lastbuildstate
src/GBHack/x64/Release/: GBHack.dll.recipe  dllmain.asm  main.asm  maths.asm
src/GBHack/x64/Release/GBHack.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GBHack.lastbuildstate  GBHack.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/x64/Release/: GBHack.iobj  GBHack.ipdb
